# openclaw

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  openclaw_gui.py  openclaw_web.py  pyproject.toml  requirements.txt
openclaw/: __main__.py  config.py  cost_tracker.py  market_data.py
openclaw/backends/: cloud_backend.py  lmstudio_backend.py  ollama_backend.py
openclaw/router/: classifier.py  router.py
openclaw/server/: lifecycle.py
openclaw/tasks/: prompts.py
scripts/: openclaw_launcher.ps1  start_servers.ps1  stop_servers.ps1
tests/: agent.py  check_columns.py  run_chat.py  smoke_test.py  test_chat_flow.py  test_classifier.py  test_deep_data.py  test_edge_cases.py  test_market_data.py
