[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
openclaw = "openclaw.__main__:main"

[tool.setuptools.packages.find]
where = ["."]